--- a/404.html
+++ b/404.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site </title>
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
     <ul>
         <li>Simulação Avançada de Células Cancerígenas</li>
-        <li class="imagem"><img src="/images/CELULA_ROXA2-removebg-preview.png" width="60" height="40"></li>
+        <li class="imagem"><img src="CELULA_ROXA2-removebg-preview.png" width="60" height="40"></li>
     </ul>
     <h1>
         Seja bem Vindo!
@@ -21,7 +20,7 @@
         usando Automatos Celulares.
     </p>
     <div class="card">
-        <img  class="imgs"src="images/versao_1.png"  style="width:100%">
+        <img  class="imgs"src="versao_1.png"  style="width:100%">
         <div class="container">
             <h1 class="title_1">Primeira Versão</h1>
             <p class="title">Células cancerigenas</p>
@@ -32,7 +31,7 @@
 
 
 <div class="card_1">
-        <img  class="imgs"src="images/cancer_mama.jpeg"  style="width: 100%">
+        <img  class="imgs"src="cancer_mama.jpeg"  style="width: 100%">
         <div class="container">
         <h1 class="title_1">Segunda Versão</h1>
         <p class="title">Câncer de Mama</p>
@@ -41,7 +40,7 @@
 </div>
 <div class="card_2">
 
-        <img class="imgs"src="/images/versão_3.png"  style="width:100%">
+        <img class="imgs"src="versão_3.png"  style="width:100%">
         <div class="container">
         <h1 class="title_1">Terceira Versão</h1>
         <p class="title">Melanoma (Câncer de Pele)</p>
