--- a/segunda_versao.html
+++ b/segunda_versao.html
@@ -21,7 +21,7 @@
 
     <div class="cancer_mama">
         <p class="title_q">Câncer de Mama</p> 
-        <img src="/images/can_mama.png"width="150px">
+        <img src="can_mama.png"width="150px">
         <a href="https://harena-lab.github.io/dcc/dcc/playground/scripts/editor-mobile.html?source=cell/mutant-cell-sliders-breast&mode=no-script-no-hide">Simulação</a>
 </div>  
  
