--- a/terceira_versao.html
+++ b/terceira_versao.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Versão 3</title>
-    <link rel="stylesheet" href="/style/ter_versao.css">
+    <link rel="stylesheet" href="ter_versao.css">
 </head>
 <body>
     <ul>
@@ -16,7 +16,7 @@
           <div class="Quera">
                 <p class="title_q">Queratinização</p> 
                 <p class="title_q">Células cancerigenas</p>
-                <img src="/images/CELULA_ROXA2-removebg-preview.png" width="100px">
+                <img src="CELULA_ROXA2-removebg-preview.png" width="100px">
                 <a class="btn" href="https://harena-lab.github.io/dcc/dcc/playground/scripts/editor-dev.html?source=cell/mutant-cell-scripts-dev-skin-1">Simulação</a>
         </div>  
          
@@ -24,7 +24,7 @@
         <div class="Mela">
             <p class="title_q">Melanoma</p> 
             <p class="title_q">Células cancerigenas</p>
-            <img src="/images/melanocitos.png" width="100px">
+            <img src="melanocitos.png" width="100px">
             <a href="https://harena-lab.github.io/dcc/dcc/playground/scripts/editor-dev.html?source=cell/mutant-cell-scripts-dev-skin-2-melanin">Simulação</a>
     </div>
 
